--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.32.0",
     "@imagekit/nodejs": "^7.1.1",
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
